Update Utrecht page

--- a/drinks.css
+++ b/drinks.css
@@ -282,3 +282,18 @@ section .👥 li > a:hover {
   color: hsl(10, 100%, 25%);
   background: hsl(10, 100%, 90%);
 }
+
+/* Videos */
+.🎬 {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
+.🎬 iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
