Added TPG sponsor to CSUN special

--- a/drinks.css
+++ b/drinks.css
@@ -272,6 +272,10 @@ section .👥 li > a:hover {
   margin: 0.5em;
 }
 
+.💰 .tpg {
+  margin: 1.85em 0;
+}
+
 .ℹ️ {
   margin: 2em auto;
   padding: 1em 2em;
