--- a/whisky.css
+++ b/whisky.css
@@ -150,7 +150,13 @@ main > section {
     padding: 2em 0;
 }
 
-h2, h3 {
+h2,
+h3 {
+    margin-top: 1.5rem;
+}
+
+h2:first-child,
+h3:first-child {
     margin-top: 0;
 }
 
@@ -327,4 +333,14 @@ section .people li > a[href]:hover {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+/* Figures */
+figure {
+    margin: 1.5em 0 0 0;
+    padding: 0;
+}
+
+figcaption {
+    margin-top: .5em;
 }
